--- a/Source/WindowsUWP/WindowsUWP.csproj
+++ b/Source/WindowsUWP/WindowsUWP.csproj
@@ -19,6 +19,8 @@
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{A5A43C5B-DE2A-4C0C-9213-0A381AF9435A};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <MonoGamePlatform>WindowsStoreApp</MonoGamePlatform>
+    <PackageCertificateThumbprint>E7F21DC692AF23B9C8E5567C2B3125AFC60D3738</PackageCertificateThumbprint>
+    <PackageCertificateKeyFile>WindowsUWP_TemporaryKey.pfx</PackageCertificateKeyFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|ARM'">
     <DebugSymbols>true</DebugSymbols>
@@ -91,9 +93,6 @@
   </PropertyGroup>
   <ItemGroup>
     <!-- A reference to the entire .Net Framework and Windows SDK are automatically included -->
-    <Reference Include="App42_CSHARP_SDK_2.0">
-      <HintPath>..\WordlyShared\App42_CSHARP_SDK_2.0.dll</HintPath>
-    </Reference>
     <Reference Include="AppWarpMonoLibrary">
       <HintPath>..\WordlyShared\AppWarpMonoLibrary.dll</HintPath>
     </Reference>
@@ -112,7 +111,15 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Content\deck\CardsForGame-NoFancyFont.pub" />
+    <None Include="Content\deck\CardsForGame-Templated.pub" />
+    <None Include="Content\deck\CardsForGame.pub" />
+    <Content Include="Content\gameplay\Cutive-Regular.ttf" />
+    <None Include="Content\gameplay\Cutive.spritefont" />
+    <None Include="Content\gameplay\GameOver.pdn" />
+    <None Include="Content\gameplay\gameOverFont.spritefont" />
     <None Include="project.json" />
+    <None Include="WindowsUWP_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
@@ -120,6 +127,74 @@
     </AppxManifest>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\audio\card-bounce.wav" />
+    <Content Include="Content\audio\card-kick.wav" />
+    <Content Include="Content\audio\card-parent.wav" />
+    <Content Include="Content\audio\card-play.wav" />
+    <Content Include="Content\audio\card-restack.wav" />
+    <Content Include="Content\audio\card-undo.wav" />
+    <Content Include="Content\audio\game-win.wav" />
+    <Content Include="Content\audio\table-animation.wav" />
+    <Content Include="Content\deck\A_10_2.png" />
+    <Content Include="Content\deck\B_2_8.png" />
+    <Content Include="Content\deck\cardBackground.png" />
+    <Content Include="Content\deck\card_selected.png" />
+    <Content Include="Content\deck\card_Slot.png" />
+    <Content Include="Content\deck\CL_2_10.png" />
+    <Content Include="Content\deck\C_2_8.png" />
+    <Content Include="Content\deck\D_4_5.png" />
+    <Content Include="Content\deck\ED_2_7.png" />
+    <Content Include="Content\deck\ER_2_7.png" />
+    <Content Include="Content\deck\E_12_2.png" />
+    <Content Include="Content\deck\F_2_6.png" />
+    <Content Include="Content\deck\G_4_6.png" />
+    <Content Include="Content\deck\H_2_7.png" />
+    <Content Include="Content\deck\ING_2_5.png" />
+    <Content Include="Content\deck\IN_2_7.png" />
+    <Content Include="Content\deck\I_8_2.png" />
+    <Content Include="Content\deck\JOKER_2_0.png" />
+    <Content Include="Content\deck\J_2_13.png" />
+    <Content Include="Content\deck\K_2_8.png" />
+    <Content Include="Content\deck\L_4_3.png" />
+    <Content Include="Content\deck\M_2_5.png" />
+    <Content Include="Content\deck\nocards.png" />
+    <Content Include="Content\deck\N_6_5.png" />
+    <Content Include="Content\deck\O_8_2.png" />
+    <Content Include="Content\deck\P_2_6.png" />
+    <Content Include="Content\deck\QU_2_9.png" />
+    <Content Include="Content\deck\Q_2_15.png" />
+    <Content Include="Content\deck\R_6_5.png" />
+    <Content Include="Content\deck\S_4_3.png" />
+    <Content Include="Content\deck\template.png" />
+    <Content Include="Content\deck\TH_2_9.png" />
+    <Content Include="Content\deck\T_6_3.png" />
+    <Content Include="Content\deck\U_6_4.png" />
+    <Content Include="Content\deck\V_2_11.png" />
+    <Content Include="Content\deck\W_2_10.png" />
+    <Content Include="Content\deck\X_2_12.png" />
+    <Content Include="Content\deck\Y_4_4.png" />
+    <Content Include="Content\deck\Z_2_14.png" />
+    <Content Include="Content\gameplay\addWord.png" />
+    <Content Include="Content\gameplay\Avatar.png" />
+    <Content Include="Content\gameplay\clear.png" />
+    <Content Include="Content\gameplay\Exit.png" />
+    <Content Include="Content\gameplay\GameOver.png" />
+    <Content Include="Content\gameplay\PlayAgain.png" />
+    <Content Include="Content\gameplay\PlayAgain_old.png" />
+    <Content Include="Content\gameplay\playingArea.png" />
+    <Content Include="Content\gameplay\wordDropSpace.png" />
+    <Content Include="Content\gameplay\wordily.png" />
+    <Content Include="Content\gameplay\wrongWord.png" />
+    <Content Include="Content\mainscreen\Multiplayer.png" />
+    <Content Include="Content\mainscreen\settings.png" />
+    <Content Include="Content\mainscreen\Solitaire.png" />
+    <Content Include="Content\mainscreen\speaker-off.png" />
+    <Content Include="Content\mainscreen\speaker.png" />
+    <Content Include="Content\splashscreen\Alef.png" />
+    <Content Include="Content\splashscreen\Bet.png" />
+    <Content Include="Content\splashscreen\Software.png" />
+    <Content Include="Content\splashscreen\tiledBackground.png" />
+    <Content Include="Content\tiledBackground.png" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
     <Content Include="Assets\SplashScreen.scale-200.png" />
