--- a/Source/DroidWordGame/DroidWordGame.csproj
+++ b/Source/DroidWordGame/DroidWordGame.csproj
@@ -291,6 +291,10 @@
     <AndroidAsset Include="Content\gameplay\wordDropSpace.png" />
     <AndroidAsset Include="Content\gameplay\wordily.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidAsset Include="Content\gameplay\ResumeGame.png" />
+    <AndroidAsset Include="Content\gameplay\StartGame.png" />
+  </ItemGroup>
   <Import Project="..\WordlyShared\WordlyShared.projitems" Label="Shared" />
   <Import Project="$(MSBuildExtensionsPath)\Novell\Novell.MonoDroid.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
