--- a/Source/WindowsUWP/WindowsUWP.csproj
+++ b/Source/WindowsUWP/WindowsUWP.csproj
@@ -19,8 +19,11 @@
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{A5A43C5B-DE2A-4C0C-9213-0A381AF9435A};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <MonoGamePlatform>WindowsStoreApp</MonoGamePlatform>
-    <PackageCertificateThumbprint>E7F21DC692AF23B9C8E5567C2B3125AFC60D3738</PackageCertificateThumbprint>
-    <PackageCertificateKeyFile>WindowsUWP_TemporaryKey.pfx</PackageCertificateKeyFile>
+    <PackageCertificateThumbprint>6FC4AD080CC76AA085EEB8E259E037E432986E3A</PackageCertificateThumbprint>
+    <PackageCertificateKeyFile>WindowsUWP_StoreKey.pfx</PackageCertificateKeyFile>
+    <AppxAutoIncrementPackageRevision>True</AppxAutoIncrementPackageRevision>
+    <AppxBundle>Always</AppxBundle>
+    <AppxBundlePlatforms>x86</AppxBundlePlatforms>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|ARM'">
     <DebugSymbols>true</DebugSymbols>
@@ -121,11 +124,16 @@
     <None Include="Content\deck\CardsForGame.pub" />
     <Content Include="App42-WINDOWS-SDK-1.2.dll" />
     <Content Include="APPWARP_WINRT.dll" />
+    <Content Include="Assets\Logo.scale-200.png" />
+    <Content Include="Assets\SmallLogo.scale-200.png" />
+    <Content Include="Assets\Square71x71Logo.scale-200.png" />
+    <Content Include="Assets\Square310x310Logo.scale-200.png" />
     <Content Include="Content\gameplay\Cutive-Regular.ttf" />
     <None Include="Content\gameplay\Cutive.spritefont" />
     <None Include="Content\gameplay\GameOver.pdn" />
     <None Include="Content\gameplay\gameOverFont.spritefont" />
     <None Include="project.json" />
+    <None Include="WindowsUWP_StoreKey.pfx" />
     <None Include="WindowsUWP_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
@@ -202,6 +210,7 @@
     <Content Include="Content\splashscreen\Software.png" />
     <Content Include="Content\splashscreen\tiledBackground.png" />
     <Content Include="Content\tiledBackground.png" />
+    <None Include="Package.StoreAssociation.xml" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
     <Content Include="Assets\SplashScreen.scale-200.png" />
@@ -226,6 +235,14 @@
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
+  </ItemGroup>
+  <ItemGroup>
+    <SDKReference Include="WindowsDesktop, Version=10.0.10586.0">
+      <Name>Windows Desktop Extensions for the UWP</Name>
+    </SDKReference>
+    <SDKReference Include="WindowsMobile, Version=10.0.10586.0">
+      <Name>Windows Mobile Extensions for the UWP</Name>
+    </SDKReference>
   </ItemGroup>
   <Import Project="..\WordlyShared\WordlyShared.projitems" Label="Shared" />
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
