--- a/Source/WindowsUWP/project.json
+++ b/Source/WindowsUWP/project.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "Facebook": "7.0.6",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.0.0",
+    "Newtonsoft.Json": "9.0.1",
     "Xam.Plugins.Settings": "2.5.1"
   },
   "frameworks": {
