--- a/Source/WindowsUWP/WindowsUWP.csproj
+++ b/Source/WindowsUWP/WindowsUWP.csproj
@@ -197,6 +197,9 @@
     <Content Include="Content\gameplay\PlayAgain.png" />
     <Content Include="Content\gameplay\PlayAgain_old.png" />
     <Content Include="Content\gameplay\playingArea.png" />
+    <Content Include="Content\gameplay\ResumeGame.png" />
+    <Content Include="Content\gameplay\StartGame.png" />
+    <Content Include="Content\gameplay\Timer.png" />
     <Content Include="Content\gameplay\wordDropSpace.png" />
     <Content Include="Content\gameplay\wordily.png" />
     <Content Include="Content\gameplay\wrongWord.png" />
