--- a/Source/WordlyWindows/WordlyWindows.csproj
+++ b/Source/WordlyWindows/WordlyWindows.csproj
@@ -133,6 +133,7 @@
     <Content Include="Content\gameplay\PlayAgain.png" />
     <Content Include="Content\gameplay\ResumeGame.png" />
     <Content Include="Content\gameplay\StartGame.png" />
+    <Content Include="Content\gameplay\Timer.png" />
     <Content Include="Content\gameplay\wordDropSpace.png" />
     <Content Include="Content\gameplay\playingArea.png" />
     <Content Include="Content\gameplay\wordily.png" />
